@@ -40,7 +40,7 @@ function slick_library_info_build() {
         $libraries[$id]['css'] = $skin['css'];
       }
       if (isset($skin['js']) && is_array($skin['js'])) {
-        $libraries[$id]['js'] = $skin['css'];
+        $libraries[$id]['js'] = $skin['js'];
       }
     }
   }
